decodebin3: Fails with assertion in mq_slot_handle_stream_start when seeking on splitmuxsrc
Describe your issue
Crash when seeking a file created with splitmuxsink using splitmuxsrc. I believe I've also seen it during just playback when transitioning between fragments, but it doesn't happen as often, or at least isn't as reproducible. I'm primarily using MKV, but I've have tested with the default splitmuxsink muxer as well.
Version 1.24.10 crashes (I do not have a way to test main or an earlier 1.24.x version). Version 1.22.6 on a different computer (macOS) works without issue.
Expected Behavior
Smooth playback and seeking.
Observed Behavior
Crash:
ERROR:../gst/playback/gstdecodebin3.c:3488:mq_slot_handle_stream_start: assertion failed: (collection)
Setup
- Operating System: Debian Trixie
- Device: Computer
- GStreamer Version: 1.24.10
- Command line: gst-play-1.0 "splitmux://./video*.mkv"
Steps to reproduce the bug
gst-play-1.0 "splitmux://./video*.mkv"
- User arrow key ahead to seek ahead
- Crash.
How reproducible is the bug?
Crashes 100% of the time.
Solutions you have tried
- Different muxer
- Limiting to use a single program vs video + audio
Related non-duplicate issues
Possibly related to the regression that caused bug #3957 (closed)?